Add styles to third section of the web

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button {
     font-weight: bolder;
     color: #1F2937;
     margin-bottom: 32px;
+    margin-top: 32px;
 }
 
 .house {
@@ -93,6 +94,7 @@ button {
     justify-content: center;
     align-items: center;
     gap: 32px;
+    margin-bottom: 100px;
 }
 
 .house img {
@@ -100,3 +102,29 @@ button {
     height: 210px;
 }
 
+/* ======================== Third Section ====================== */
+.third {
+    background: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: light;
+    color: #1F2937;
+    max-width: 800px;
+    margin-top: 100px;
+}
+
+.author {
+    font-size: 24px;
+    font-weight: bolder;
+    color: #1F2937;
+    align-self: flex-end;
+    margin-right: 300px;
+    margin-bottom: 100px;
+}
