--- a/style.css
+++ b/style.css
@@ -58,11 +58,12 @@ img {
 }
 
 button {
-    padding: 8px 16px;
+    font-size: 20px;
+    padding: 8px 24px;
     border-radius: 8px;
-    background: #3883F6;
+    background: #3882F6;
     color: #F9FAF8;
-    border: 1px solid #3883F6;
+    border: 1px solid #3882F6;
 }
 
 .intro, .headline {
@@ -127,4 +128,32 @@ button {
     align-self: flex-end;
     margin-right: 300px;
     margin-bottom: 100px;
+}
+
+/* ======================== Fourth Section ====================== */
+.fourth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    background: #3882F6;
+    display: flex;
+    margin: 100px;
+    border-radius: 8px;
+    padding: 40px 80px; 
+    gap:200px;
+    align-items: center;
+}
+
+.call {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bolder;
+}
+
+.container button {
+    border: 2px solid #F9FAF8;
+    padding: 8px 24px;
 }
