--- a/style.css
+++ b/style.css
@@ -157,3 +157,14 @@ button {
     border: 2px solid #F9FAF8;
     padding: 8px 24px;
 }
+
+/* ======================== Footer Section ====================== */
+.footer {
+    background: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+    font-size: 18px;
+    height: 150px;
+}
